[project]
name = "notturnometer"
version = "0.1.0"
description = "Analysis of pieces played on BBC Radio 3's Through the Night"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nick Sweeney", email = "nick@nicksweeney.com" },
]
dependencies = [
    "requests>=2.34.1",
]
