[project]
name = "notturnometer"
version = "0.1.0"
description = "Analysis of pieces played on BBC Radio 3's Through the Night"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nick Sweeney", email = "nick@nicksweeney.com" },
]
dependencies = [
    "requests>=2.34.1",
]

[tool.pytest.ini_options]
# Live tests read the real 303 MB ttn.sqlite and are slow (full-corpus builds);
# they're deselected by default so the routine run is the ~1000 fast synthetic
# tests in seconds. Run the live ones explicitly: `pytest -m live` (or
# `pytest -m "live or not live"` for absolutely everything).
markers = [
    "live: integration test that reads the real ttn.sqlite (slow; deselected by default)",
]
addopts = "-m 'not live'"
